@@ -1,3 +1,7 @@
+2015-01-04 Jan Gehring <jan.gehring, gmail.com> (0.3.0)
+  * added initial docker support (login, push, pull, search)
+  * added file server for apt and yum
+
 2015-01-02 Jan Gehring <jan.gehring, gmail.com> (0.2.0)
   * added possibility to sign repositories (apt and yum)
   * fixed centos mirror bug (CentOS 7 - efidisk.img not existing) - #4
